--- a/src/main/resources/fxml/MainWindowView.fxml
+++ b/src/main/resources/fxml/MainWindowView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
@@ -10,14 +11,27 @@
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                  <ListView fx:id="listView" layoutX="17.0" layoutY="73.0" prefHeight="474.0" prefWidth="500.0"  />
+                  <ListView fx:id="listView" layoutX="17.0" layoutY="73.0" prefHeight="474.0" prefWidth="500.0" />
                   <Text layoutX="17.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Avaiable Peers" />
                </children></AnchorPane>
       </content>
     </Tab>
     <Tab text="Settings">
       <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <SplitPane dividerPositions="0.29797979797979796" layoutX="13.0" layoutY="13.0" prefHeight="563.0" prefWidth="1006.0">
+                    <items>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="232.0" prefWidth="253.0">
+                           <children>
+                              <Button id="button_prefernces" layoutX="31.0" layoutY="46.0" mnemonicParsing="false" onAction="#handlePreferencesButtonAction" prefHeight="43.0" prefWidth="217.0" text="Preferences" />
+                              <Button layoutX="31.0" layoutY="117.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="217.0" text="Button" />
+                           </children>
+                        </AnchorPane>
+                      <AnchorPane id="preferencesRootPane" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
+                    </items>
+                  </SplitPane>
+               </children></AnchorPane>
       </content>
     </Tab>
   </tabs>
