--- a/src/main/resources/fxml/ListCell.fxml
+++ b/src/main/resources/fxml/ListCell.fxml
@@ -5,18 +5,23 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<GridPane fx:id="gridPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="25.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane fx:id="gridPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="39.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
-        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" prefWidth="50.0" />
-        <ColumnConstraints hgrow="SOMETIMES" percentWidth="50"/>
+        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" prefWidth="85.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="120.0" minWidth="90.0" percentWidth="50.0" prefWidth="90.0" />
         <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" prefWidth="30.0" />
-        <ColumnConstraints hgrow="SOMETIMES" percentWidth="50" />
+        <ColumnConstraints hgrow="SOMETIMES" percentWidth="50.0" />
     </columnConstraints>
     <rowConstraints>
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <children>
         <Label fx:id="label1" prefHeight="31.0" prefWidth="114.0" text="Label" GridPane.columnIndex="1" />
         <Label fx:id="label2" prefHeight="31.0" prefWidth="124.0" text="Label" GridPane.columnIndex="3" />
+      <Label text="IP:" />
+      <Label text="FN:" GridPane.columnIndex="2" />
+      <Label text="Fingerprint:" GridPane.rowIndex="1" />
+      <Label text="DN:" GridPane.columnIndex="2" GridPane.rowIndex="1" />
     </children>
 </GridPane>
