--- a/src/main/resources/fxml/MainWindowView.fxml
+++ b/src/main/resources/fxml/MainWindowView.fxml
@@ -9,16 +9,29 @@
   <tabs>
     <Tab text="Transfers">
       <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="634.0" prefWidth="1131.0">
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="613.0" prefWidth="915.0">
                <children>
-                   <Label layoutX="17.0" layoutY="14.0" text="Friendly Name:" />
-                   <Label layoutX="17.0" layoutY="45.0" text="IP-Address:" />
-                   <Text layoutX="175.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="160.7392578125" />
-                   <Text layoutX="175.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="160.7392578125" />
-                   <Label layoutX="16.0" layoutY="76.0" text="Fingerprint:" />
-                   <Text layoutX="175.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="160.7392578125" />
                    <Text layoutX="17.0" layoutY="149.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Avaiable Peers" />
                    <ListView fx:id="listView" layoutX="17.0" layoutY="160.0" prefHeight="411.0" prefWidth="500.0" />
+                  <GridPane layoutX="13.0" layoutY="9.0" prefHeight="95.0" prefWidth="422.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="206.0" minWidth="10.0" prefWidth="143.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="279.0" minWidth="10.0" prefWidth="279.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                         <Label text="Friendly Name:" />
+                         <Label text="IP-Address:" GridPane.rowIndex="1" />
+                         <Label text="Fingerprint:" GridPane.rowIndex="2" />
+                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="172.96.12.88" wrappingWidth="160.7392578125" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="afa89fa9sfasf09" wrappingWidth="160.7392578125" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="hansWurst" wrappingWidth="116.7392578125" GridPane.columnIndex="1" />
+                     </children>
+                  </GridPane>
                   </children></AnchorPane>
       </content>
     </Tab>
@@ -34,7 +47,7 @@
                               <Button layoutX="31.0" layoutY="117.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="217.0" text="Button" />
                            </children>
                         </AnchorPane>
-                      <AnchorPane id="preferencesRootPane" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
+                      <AnchorPane fx:id="preferencesRootPane" minHeight="0.0" minWidth="0.0" prefHeight="561.0" prefWidth="415.0" />
                     </items>
                   </SplitPane>
                </children></AnchorPane>
