--- a/src/main/resources/fxml/PreferencesView.fxml
+++ b/src/main/resources/fxml/PreferencesView.fxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:controller="ch.hsr.epj.localshare.demo.gui.application.PreferencesViewController" prefHeight="400.0" prefWidth="738.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button layoutX="199.0" layoutY="178.0" mnemonicParsing="false" text="aksdjosajdoasjdl" />
+      <Label layoutX="28.0" layoutY="54.0" prefHeight="31.0" prefWidth="277.0" text="Current Download Path:" />
+      <Text fx:id="path" layoutX="28.0" layoutY="129.0" strokeType="OUTSIDE" strokeWidth="0.0" text="C:\TEMP\LocalShareDownloads" wrappingWidth="459.13671875" />
+      <Button layoutX="378.0" layoutY="99.0" mnemonicParsing="false" text="Change Path" onAction="#handleChangeDirectoryButtonAction"/>
    </children>
 </AnchorPane>
