--- a/src/main/resources/fxml/ListCell.fxml
+++ b/src/main/resources/fxml/ListCell.fxml
@@ -5,23 +5,25 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<GridPane fx:id="gridPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="39.0" prefWidth="250.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane fx:id="gridPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
-        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" prefWidth="85.0" />
-        <ColumnConstraints hgrow="SOMETIMES" maxWidth="120.0" minWidth="90.0" percentWidth="50.0" prefWidth="90.0" />
-        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" prefWidth="30.0" />
-        <ColumnConstraints hgrow="SOMETIMES" percentWidth="50.0" />
+        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="105.0" minWidth="10.0" prefWidth="94.0" />
+        <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" maxWidth="200.0" minWidth="0.0" percentWidth="0.0" prefWidth="175.0" />
+        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="295.0" minWidth="0.0" prefWidth="36.0" />
+        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="100.0" minWidth="10.0" prefWidth="83.0" />
     </columnConstraints>
     <rowConstraints>
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     </rowConstraints>
     <children>
-        <Label fx:id="label1" prefHeight="31.0" prefWidth="114.0" text="Label" GridPane.columnIndex="1" />
-        <Label fx:id="label2" prefHeight="31.0" prefWidth="124.0" text="Label" GridPane.columnIndex="3" />
+      <Label fx:id="ip" prefHeight="17.0" prefWidth="102.0" text="IP:" GridPane.columnIndex="1" />
+      <Label fx:id="fn" prefHeight="17.0" prefWidth="72.0" text="FN:" GridPane.columnIndex="3" />
+      <Label fx:id="finger" prefHeight="17.0" prefWidth="103.0" text="Fingerprint:" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <Label fx:id="dn" prefHeight="17.0" prefWidth="91.0" text="DN:" GridPane.columnIndex="3" GridPane.rowIndex="1" />
       <Label text="IP:" />
-      <Label text="FN:" GridPane.columnIndex="2" />
       <Label text="Fingerprint:" GridPane.rowIndex="1" />
+      <Label text="FN:" GridPane.columnIndex="2" />
       <Label text="DN:" GridPane.columnIndex="2" GridPane.rowIndex="1" />
     </children>
 </GridPane>
