--- a/src/main/resources/fxml/MainWindowView.fxml
+++ b/src/main/resources/fxml/MainWindowView.fxml
@@ -21,7 +21,7 @@
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="613.0" prefWidth="915.0">
                <children>
                  <Text layoutX="17.0" layoutY="149.0" strokeType="OUTSIDE" strokeWidth="0.0"
-                   text="Avaiable Peers"/>
+                   text="Available Peers"/>
                  <ListView fx:id="listView" layoutX="17.0" layoutY="160.0" prefHeight="411.0"
                    prefWidth="500.0" onMouseClicked="#onListItemDoubleClick"/>
                  <GridPane layoutX="13.0" layoutY="9.0" prefHeight="95.0" prefWidth="422.0">
