--- a/src/main/resources/fxml/MainWindowView.fxml
+++ b/src/main/resources/fxml/MainWindowView.fxml
@@ -1,22 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import java.lang.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Text?>
-
 <TabPane tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ch.hsr.epj.localshare.demo.gui.application.MainWindowController">
   <tabs>
       <Tab text="Transfers">
@@ -39,9 +26,12 @@
                                 <Label text="Friendly Name:" />
                                 <Label text="IP-Address:" GridPane.rowIndex="1" />
                                 <Label text="Fingerprint:" GridPane.rowIndex="2" />
-                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="172.96.12.88" wrappingWidth="160.7392578125" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="afa89fa9sfasf09" wrappingWidth="160.7392578125" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                <Text strokeType="OUTSIDE" strokeWidth="0.0" text="hansWurst" wrappingWidth="116.7392578125" GridPane.columnIndex="1" />
+                                <Text fx:id="IpAddress" strokeType="OUTSIDE" strokeWidth="0.0" text="172.96.12.88"
+                                      wrappingWidth="160.7392578125" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                                <Text fx:id="FingerPrint" strokeType="OUTSIDE" strokeWidth="0.0"
+                                      wrappingWidth="160.7392578125" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+                                <Text fx:id="FriendlyName" strokeType="OUTSIDE" strokeWidth="0.0" text="hansWurst"
+                                      wrappingWidth="116.7392578125" GridPane.columnIndex="1"/>
                             </children>
                            <padding>
                               <Insets bottom="20.0" />
