--- a/src/main/resources/fxml/MainWindowView.fxml
+++ b/src/main/resources/fxml/MainWindowView.fxml
@@ -33,13 +33,13 @@
                                         <Label text="Friendly Name:"/>
                                         <Label text="IP-Address:" GridPane.rowIndex="1"/>
                                         <Label text="Fingerprint:" GridPane.rowIndex="2"/>
-                                        <Text fx:id="IpAddress" strokeType="OUTSIDE" strokeWidth="0.0"
+                                        <Text fx:id="ipAddressText" strokeType="OUTSIDE" strokeWidth="0.0"
                                               text="172.96.12.88" wrappingWidth="160.7392578125"
                                               GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-                                        <Text fx:id="FingerPrint" strokeType="OUTSIDE" strokeWidth="0.0" text=""
+                                        <Text fx:id="fingerPrintText" strokeType="OUTSIDE" strokeWidth="0.0" text=""
                                               wrappingWidth="457.7392578125" GridPane.columnIndex="1"
                                               GridPane.rowIndex="2" GridPane.vgrow="ALWAYS"/>
-                                        <Text fx:id="FriendlyName" strokeType="OUTSIDE" strokeWidth="0.0"
+                                        <Text fx:id="friendlyNameText" strokeType="OUTSIDE" strokeWidth="0.0"
                                               text="hansWurst" wrappingWidth="116.7392578125" GridPane.columnIndex="1"/>
                                     </children>
                                     <padding>
