--- a/src/main/resources/fxml/StartupView.fxml
+++ b/src/main/resources/fxml/StartupView.fxml
@@ -1,40 +1,77 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
+<?import javafx.scene.text.Font?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="ch.hsr.epj.localshare.demo.gui.application.StartupViewController">
-    <children>
-        <Label layoutX="35.0" layoutY="56.0" prefHeight="70.0" prefWidth="555.0" text="Hello and welcome to LocalShare">
+    <VBox alignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
+          AnchorPane.topAnchor="0.0">
+        <Label prefHeight="70.0" prefWidth="555.0" text="Hello and Welcome to LocalShare">
             <font>
                 <Font size="36.0"/>
             </font>
         </Label>
-        <GridPane layoutX="35.0" layoutY="144.0" prefHeight="208.0" prefWidth="501.0">
+        <GridPane alignment="CENTER" prefHeight="111.0" prefWidth="580.0">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="317.0" minWidth="10.0" prefWidth="194.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="240.0" minWidth="10.0" prefWidth="211.0"/>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="240.0" minWidth="10.0" prefWidth="122.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" percentWidth="30.0"/>
+                <ColumnConstraints hgrow="SOMETIMES"/>
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
             </rowConstraints>
-            <children>
-                <Label prefHeight="11.0" prefWidth="276.0" text="Please enter a friendlyName:"/>
-                <TextField fx:id="friendlyNameText" text="unknown" GridPane.columnIndex="1"/>
-                <Label text="Default Config Path:" GridPane.rowIndex="1"/>
-                <Label text="Set Default Download Folder:" GridPane.rowIndex="2"/>
-                <Label fx:id="defaultConfigLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-                <Label fx:id="defaultDownloadLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
-                <Button mnemonicParsing="false" onAction="#handleChangeDownloadButtonClicked" text="Change Directory"
-                        GridPane.columnIndex="2" GridPane.rowIndex="2"/>
-            </children>
+            <VBox.margin>
+                <Insets left="10.0" right="10.0" top="30.0"/>
+            </VBox.margin>
+            <padding>
+                <Insets left="50.0" right="50.0"/>
+            </padding>
+            <Label prefHeight="11.0" prefWidth="276.0" text="Please enter a friendlyName:">
+                <padding>
+                    <Insets bottom="5.0" right="5.0" top="5.0"/>
+                </padding>
+            </Label>
+            <TextField fx:id="friendlyNameText" text="unknown" GridPane.columnIndex="1">
+                <GridPane.margin>
+                    <Insets left="20.0" right="10.0"/>
+                </GridPane.margin>
+            </TextField>
+            <Label text="Default Config Path:" GridPane.rowIndex="1">
+                <GridPane.margin>
+                    <Insets bottom="10.0" top="10.0"/>
+                </GridPane.margin>
+            </Label>
+            <Label text="Set Default Download Folder:" GridPane.rowIndex="2">
+                <padding>
+                    <Insets bottom="5.0" top="5.0"/>
+                </padding>
+            </Label>
+            <Label fx:id="defaultConfigLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                <GridPane.margin>
+                    <Insets left="30.0"/>
+                </GridPane.margin>
+            </Label>
+            <Label fx:id="defaultDownloadLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                <GridPane.margin>
+                    <Insets left="30.0"/>
+                </GridPane.margin>
+            </Label>
+            <Button mnemonicParsing="false" onAction="#handleChangeDownloadButtonClicked"
+                    text="Change Directory" GridPane.columnIndex="1" GridPane.halignment="RIGHT"
+                    GridPane.rowIndex="2">
+                <GridPane.margin>
+                    <Insets left="10.0" right="10.0"/>
+                </GridPane.margin>
+            </Button>
         </GridPane>
-        <Button layoutX="173.0" layoutY="352.0" mnemonicParsing="false" onAction="#handleFinishButtonClick"
-                text="Finish and start Application"/>
-    </children>
+        <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false"
+                onAction="#handleFinishButtonClick" text="Finish and start Application">
+            <VBox.margin>
+                <Insets top="50.0"/>
+            </VBox.margin>
+        </Button>
+    </VBox>
 </AnchorPane>
