format code with pascals checklist

--- a/src/main/resources/fxml/MainWindowView.fxml
+++ b/src/main/resources/fxml/MainWindowView.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 <TabPane xmlns:fx="http://javafx.com/fxml/1" onDragExited="#onWindowDragExit" onDragOver="#onWindowDragEnter"
-         tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8"
+         tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/8.0.171"
          fx:controller="ch.hsr.epj.localshare.demo.gui.application.MainWindowController">
     <Tab text="Transfers">
         <AnchorPane>
@@ -17,12 +17,12 @@
                 <GridPane VBox.vgrow="ALWAYS">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="206.0" minWidth="10.0" prefWidth="127.0"/>
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="358.0" minWidth="10.0" prefWidth="358.0"/>
+                        <ColumnConstraints hgrow="SOMETIMES"/>
                     </columnConstraints>
                     <rowConstraints>
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0"/>
                     </rowConstraints>
                     <padding>
                         <Insets bottom="20.0"/>
@@ -33,8 +33,8 @@
                     <Text fx:id="ipAddressText" strokeType="OUTSIDE" strokeWidth="0.0" text="172.96.12.88"
                           wrappingWidth="160.7392578125" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
                     <Text fx:id="fingerPrintText" strokeType="OUTSIDE" strokeWidth="0.0" text="1234"
-                          wrappingWidth="457.7392578125" GridPane.columnIndex="1" GridPane.rowIndex="2"
-                          GridPane.vgrow="ALWAYS"/>
+                          wrappingWidth="581.7392578125" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS"
+                          GridPane.rowIndex="2" GridPane.vgrow="ALWAYS"/>
                     <Text fx:id="friendlyNameText" strokeType="OUTSIDE" strokeWidth="0.0" text="hansWurst"
                           wrappingWidth="116.7392578125" GridPane.columnIndex="1"/>
                 </GridPane>
