--- a/src/main/resources/fxml/ChannelView.fxml
+++ b/src/main/resources/fxml/ChannelView.fxml
@@ -3,8 +3,8 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<AnchorPane prefHeight="400.0" prefWidth="738.0" xmlns="http://javafx.com/javafx/8"
-            xmlns:fx="http://javafx.com/fxml/1"
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="738.0"
+            xmlns="http://javafx.com/javafx/8"
             fx:controller="ch.hsr.epj.localshare.demo.gui.application.ChannelViewController">
     <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
           AnchorPane.topAnchor="0.0">
