--- a/src/main/resources/fxml/MainWindowView.fxml
+++ b/src/main/resources/fxml/MainWindowView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -73,8 +74,7 @@
                       <children>
                         <Text VBox.vgrow="ALWAYS" strokeType="OUTSIDE" strokeWidth="0.0"
                           text="Available Downloads"/>
-                        <ListView VBox.vgrow="ALWAYS" onMouseClicked="#onListItemDoubleClick"
-                          fx:id="listViewTransfer"/>
+                        <ListView VBox.vgrow="ALWAYS" fx:id="listViewTransfer"/>
                       </children>
                     </VBox>
                   </children>
