deleted onDoubleClick Method for PeerList

--- a/src/main/resources/fxml/MainWindowView.fxml
+++ b/src/main/resources/fxml/MainWindowView.fxml
@@ -54,7 +54,7 @@
                 <Insets bottom="10.0"/>
               </VBox.margin>
             </Text>
-            <ListView fx:id="listView" onMouseClicked="#onListItemDoubleClick" VBox.vgrow="ALWAYS"/>
+            <ListView VBox.vgrow="ALWAYS" fx:id="listView"/>
             <padding>
               <Insets right="10.0"/>
             </padding>
