--- a/src/main/resources/fxml/ChannelView.fxml
+++ b/src/main/resources/fxml/ChannelView.fxml
@@ -7,27 +7,31 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="738.0"
-  xmlns="http://javafx.com/javafx/8"
+<?import javafx.scene.text.Font?>
+<AnchorPane prefHeight="400.0" prefWidth="738.0" xmlns="http://javafx.com/javafx/8"
+  xmlns:fx="http://javafx.com/fxml/1"
   fx:controller="ch.hsr.epj.localshare.demo.gui.application.ChannelViewController">
   <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
     AnchorPane.topAnchor="0.0">
     <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+      <Label alignment="CENTER" text="Create New Channel">
+        <padding>
+          <Insets bottom="20.0"/>
+        </padding>
+        <font>
+          <Font size="24.0"/>
+        </font>
+      </Label>
+      <TextField maxWidth="300.0" promptText="Enter Channel Name">
+        <VBox.margin>
+          <Insets bottom="10.0"/>
+        </VBox.margin>
+      </TextField>
       <Button mnemonicParsing="false" text="Create Channel">
         <VBox.margin>
           <Insets top="5.0"/>
         </VBox.margin>
       </Button>
-      <Label alignment="CENTER" text="Create New Channel">
-        <padding>
-          <Insets bottom="20.0"/>
-        </padding>
-      </Label>
-      <TextField maxWidth="300.0" promptText="Enter Channel Name">
-        <VBox.margin>
-          <Insets/>
-        </VBox.margin>
-      </TextField>
       <Label text="Note:  You have to announce your channelname verbally!">
         <VBox.margin>
           <Insets top="10.0"/>
@@ -37,7 +41,7 @@
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
       </padding>
     </VBox>
-    <VBox VBox.vgrow="ALWAYS" alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="100.0">
+    <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="100.0" VBox.vgrow="ALWAYS">
       <padding>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
       </padding>
