--- a/src/main/resources/fxml/TransferCell.fxml
+++ b/src/main/resources/fxml/TransferCell.fxml
@@ -7,22 +7,31 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 <AnchorPane fx:id="paneTransfer" xmlns="http://javafx.com/javafx/8"
   xmlns:fx="http://javafx.com/fxml/1">
   <HBox alignment="CENTER_LEFT" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
     AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-    <AnchorPane>
-      <HBox.margin>
-        <Insets/>
-      </HBox.margin>
-      <ImageView fx:id="finishedIcon" layoutY="7.0" visible="false">
+    <StackPane>
+      <ImageView fx:id="finishedIcon" visible="false">
         <Image url="@../success.png"/>
       </ImageView>
-      <ImageView fx:id="downloadingIcon" layoutY="4.0">
+      <ImageView fx:id="downloadingIcon">
         <Image url="@../download.png"/>
       </ImageView>
-    </AnchorPane>
+      <Text fx:id="fileEnding" fill="GREEN" strokeType="OUTSIDE" strokeWidth="0.0" text=".docx"
+        StackPane.alignment="TOP_CENTER">
+        <font>
+          <Font name="System Bold" size="13.0"/>
+        </font>
+        <StackPane.margin>
+          <Insets top="28.0"/>
+        </StackPane.margin>
+      </Text>
+    </StackPane>
     <VBox alignment="CENTER" HBox.hgrow="ALWAYS">
       <HBox.margin>
         <Insets left="5.0"/>
